identity/client/src/index.scss
@use "@carbon/react" as * with (
  $font-path: "@ibm/plex"
);
@use "@carbon/react/scss/themes";
@use "@carbon/react/scss/theme";

:root {
  @include theme.theme(themes.$g10);
}

[data-carbon-theme="g10"] {
  @include theme.theme(themes.$g10);
}

[data-carbon-theme="g100"] {
  @include theme.theme(themes.$g100);
}

h1 {
  @include type-style("heading-04");
}

h2 {
  @include type-style("heading-03");
}

h3 {
  @include type-style("heading-02");
}

h4 {
  @include type-style("heading-01");
}

p {
  @include type-style("body-01");
}

.cds--list-box input[role="combobox"],
.cds--list-box input[type="text"] {
  background-color: var(--cds-field-02, #ffffff);
}

